--- a/fj21-agenda/WebContent/WEB-INF/web.xml
+++ b/fj21-agenda/WebContent/WEB-INF/web.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <servlet>
-  <servlet-name>servletOiMundo</servlet-name>
-  <servlet-class>
-  br.com.caelum.servlet.OiMundo
-  </servlet-class>
-  </servlet>
+  <error-page>
+  <exception-type>java.lang.Exception</exception-type>
+  <location>/error.html</location>
+  </error-page>
   
-  <servlet-mapping>
-  <servlet-name>servletOiMundo</servlet-name>
-  <url-pattern>/oi</url-pattern>
-  </servlet-mapping>
+  <error-page>
+  <error-code>404</error-code>
+  <location>/404.html</location>
+  </error-page>
   
   <display-name>fj21-agenda</display-name>
   <welcome-file-list>
